--- a/Ukulele-CNN-MFCC.ipynb
+++ b/Ukulele-CNN-MFCC.ipynb
@@ -40,7 +40,7 @@
    },
    "outputs": [],
    "source": [
-    "my_path = 'D:\\UkuleleData'"
+    "my_path = 'D:\\Basic-Chord-Ukulele-Dataset'"
    ]
   },
   {
